syntax = "proto3";
package DomainServices.ProductService;
option csharp_namespace = "DomainServices.ProductService.Contracts";

import "GrpcDecimal.proto";
import "Messages/Types.proto";

message GetProductObligationListRequest {
    int64 ProductId = 1;
}

message GetProductObligationListResponse {
    repeated GetProductObligationItem ProductObligations = 1;
}

message GetProductObligationItem {
    int32 ProductObligationId = 1;
    int32 ObligationTypeId = 2;
    cis.types.GrpcDecimal Amount = 3;
    string CreditorName = 4;
    PaymentAccount PaymentAccount = 5;
    PaymentSymbols PaymentSymbols = 6; 
}